Parent actuator causes blender to crash #44782

Closed
opened 2015-05-20 05:04:48 +02:00 by Sapphira Armageddos · 17 comments

System Information
Arch Linux 64 + NVidia GT 630

OR

Windows 7 Home Premium 64 bit + NVidia GTX560M

Blender Version
Broken: 2.74 000dfc0

Short description of error
Blender crashes because of something in about parent actuators, judging by the crash log. On Windows, it causes an access error violation.

Exact steps for others to reproduce the error

  1. Open the attached blend file
  2. Press P in the 3D View Window

Expected result: Blender... not crashing. Maybe spitting out an error message, but not crashing.
Actual result: It crashes.

**System Information** Arch Linux 64 + NVidia GT 630 OR Windows 7 Home Premium 64 bit + NVidia GTX560M **Blender Version** Broken: 2.74 000dfc0 **Short description of error** Blender crashes because of something in about parent actuators, judging by the crash log. On Windows, it causes an access error violation. **Exact steps for others to reproduce the error** 1. Open the attached blend file 2. Press P in the 3D View Window Expected result: Blender... not crashing. Maybe spitting out an error message, but not crashing. Actual result: It crashes. * [test_case.crash.txt](https://archive.blender.org/developer/F177752/test_case.crash.txt) <- Linux crash log * [test_case.blend](https://archive.blender.org/developer/F177753/test_case.blend) <- blend file for testing * [test_case.crash.txt](https://archive.blender.org/developer/F177754/test_case.crash.txt) <- Windows crash log

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ShadowKyogre

Added subscriber: @ShadowKyogre

Added subscriber: @dhaosvalor

Added subscriber: @dhaosvalor

I duplicated the issue in this file. Blender crashes upon activating the parent actuator in the script.
crash_dup.blend

I duplicated the issue in this file. Blender crashes upon activating the parent actuator in the script. [crash_dup.blend](https://archive.blender.org/developer/F177757/crash_dup.blend)
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

I confirm the bug

I confirm the bug
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

There are to many task set to normal moving to confirmed

There are to many task set to normal moving to confirmed
Member

In #44782#313950, @Blendify wrote:
There are to many task set to normal moving to confirmed

Which is the difference between confirmed and normal?

> In #44782#313950, @Blendify wrote: > There are to many task set to normal moving to confirmed Which is the difference between confirmed and normal?
Member

Um.. Not a lot just a little more important like blender crashing if you look a the bf blender page we try to keep them a little more used to make the bug tracker more organized

Um.. Not a lot just a little more important like blender crashing if you look a the bf blender page we try to keep them a little more used to make the bug tracker more organized
Member

the crash comes from parent actuator cross linked from other object.

the crash comes from parent actuator cross linked from other object.

Added subscriber: @panzergame

Added subscriber: @panzergame

The reason of the bug is that you parented an active object with an inactive object and it cause some troubles with physics. @ShadowKyogre i'm not sure that is what you want ?

The reason of the bug is that you parented an active object with an inactive object and it cause some troubles with physics. @ShadowKyogre i'm not sure that is what you want ?
Member

Added subscriber: @hg1

Added subscriber: @hg1
Member

Actually blender will only crash if the cross link comes from the controller (cross link between sensor and controller is working).
As workaround for the bug the user can move parenting script controller to the child object and get the parent owner form the sensor.
crash_dup workaround.blend

Actually blender will only crash if the cross link comes from the controller (cross link between sensor and controller is working). As workaround for the bug the user can move parenting script controller to the child object and get the parent owner form the sensor. [crash_dup workaround.blend](https://archive.blender.org/developer/F211998/crash_dup_workaround.blend)

This issue was referenced by 65c3207517

This issue was referenced by 65c320751714a6d4835c0256f6cadcdc60d095db

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44782
No description provided.