BGE: Fix T44782 suspend/restore dynamics on inactive object.